# react-rust-actix-graphql-starter

./: README.md
client/: package.json
client/src/: App.js  Header.jsx
client/src/util/: constants.js
server/: Cargo.toml
server/src/: graphql_schema.rs  main.rs
