[package]
name = "anatase-server"
version = "0.1.0"
authors = ["Kevin Hernandez <contact@whatsnextforkev.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-cors = "0.2"
listenfd = "0.3"
actix-files = "0.2.1"
env_logger = "0.7.1"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.14.2"